Fixed image overflow

--- a/CSS/GallerySlideshow.css
+++ b/CSS/GallerySlideshow.css
@@ -4,11 +4,11 @@
 .mySlides img {
   vertical-align: middle;
   max-width: 100%;
-  height: 100%
+  height: 100%;
 }
 .slideshow-container {
   width: 950px;
-  max-height: 500px;
+  height: 500px;
   position: relative;
   margin: auto;
   background-color: black;
